kubernetes/gateway-api/envoy/10-backendpolicy-ratelimit.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-go-httproute
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: go-route
  rateLimit:
    local:
      rules:
      # - clientSelectors:
      #   - path:
      #       type: Exact
      #       value: /api/go
      - limit:
          requests: 3
          unit: Hour
