kubernetes/gateway-api/envoy/10.1-backendpolicy-ratelimit-minimal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-route-ratelimit-minimal
  namespace: default

spec:
  parentRefs:
  - name: gateway-api
    sectionName: http
    kind: Gateway

  hostnames:
  - example-app.com

  rules:
  - matches:
    - path:
        type: Exact
        value: /ratelimit-minimal
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplaceFullPath
          replaceFullPath: /status
    backendRefs:
    - name: go-svc
      port: 5000
      weight: 1
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-go-minimal
  namespace: default
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: go-route-ratelimit-minimal
  rateLimit:
    local:
      rules:
      - limit:
          requests: 3
          unit: Hour
